--- a/index..html
+++ b/index..html
@@ -24,45 +24,57 @@
       </div>
       <div class="hero"></div>
       <div class="content">
-        <h2>Judul Artikel</h2>
-        <p class="penulis">
-          Ditulis oleh <a href="#">Maulana Husain</a> pada 1 September 2024
-        </p>
+        <div class="profil">
+          <h3>Tentang Penulis</h3>
+          <img src="img/fotoku.jpg" alt="fotoku" />
+          <p>
+            Web Programming Lorem ipsum dolor sit amet consectetur adipisicing
+            elit. Minima aspernatur, facere alias recusandae reprehenderit modi
+            ea eveniet excepturi sapiente consectetur Lorem, ipsum dolor sit
+            amet consectetur adipisicing elit. Nam, sequi.
+          </p>
+        </div>
+        <div class="main">
+          <h2>Judul Artikel</h2>
+          <p class="penulis">
+            Ditulis oleh <a href="#">Maulana Husain</a> pada 1 September 2024
+          </p>
 
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum
-          quam cumque maiores eos numquam nam distinctio obcaecati odit
-          exercitationem. Iure laborum maxime, cum repellendus recusandae a
-          doloribus accusamus placeat! Odit, saepe eos! Animi, aperiam ut non
-          quam dolores obcaecati rem temporibus, deserunt dolor, mollitia sint
-          ab beatae et fugit quod.
-        </p>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum
+            quam cumque maiores eos numquam nam distinctio obcaecati odit
+            exercitationem. Iure laborum maxime, cum repellendus recusandae a
+            doloribus accusamus placeat! Odit, saepe eos! Animi, aperiam ut non
+            quam dolores obcaecati rem temporibus, deserunt dolor, mollitia sint
+            ab beatae et fugit quod.
+          </p>
 
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
-          provident at minima inventore laudantium magni, temporibus minus modi
-          dolorem dolorum accusamus molestiae sint laborum adipisci hic nam
-          excepturi asperiores et in dolores. Aut quibusdam quia tempore ipsam
-          quis perspiciatis quam sit fuga obcaecati est, in nisi libero
-          doloribus vel provident, qui recusandae vero aspernatur nihil
-          excepturi voluptas voluptatibus quaerat maiores alias? Aliquam sequi
-          ipsam ad veritatis quas voluptas voluptatum maiores atque, veniam
-          porro tenetur sit culpa consequatur alias qui hic saepe, molestiae
-          molestias quia animi fugiat delectus! Saepe, eos nostrum totam at
-          facere corrupti recusandae magnam impedit! Maiores, magni optio.
-        </p>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit
+            provident at minima inventore laudantium magni, temporibus minus
+            modi dolorem dolorum accusamus molestiae sint laborum adipisci hic
+            nam excepturi asperiores et in dolores. Aut quibusdam quia tempore
+            ipsam quis perspiciatis quam sit fuga obcaecati est, in nisi libero
+            doloribus vel provident, qui recusandae vero aspernatur nihil
+            excepturi voluptas voluptatibus quaerat maiores alias? Aliquam sequi
+            ipsam ad veritatis quas voluptas voluptatum maiores atque, veniam
+            porro tenetur sit culpa consequatur alias qui hic saepe, molestiae
+            molestias quia animi fugiat delectus! Saepe, eos nostrum totam at
+            facere corrupti recusandae magnam impedit! Maiores, magni optio.
+          </p>
 
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt
-          dolorem dicta, cupiditate porro quisquam maxime vel eos ut,
-          perferendis odit vitae? Consectetur maiores at odit nihil recusandae
-          iure eum delectus, sequi dolorum libero harum unde animi quaerat
-          explicabo, laborum porro neque nostrum, ducimus modi. Quisquam fuga
-          nulla, quos animi similique autem praesentium maxime iusto dolores
-          culpa dolorem explicabo ullam assumenda id officia ex reiciendis porro
-          non placeat quidem voluptatibus reprehenderit, at molestias. Ea vitae
-          veniam aut excepturi consectetur fuga error?
-        </p>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt
+            dolorem dicta, cupiditate porro quisquam maxime vel eos ut,
+            perferendis odit vitae? Consectetur maiores at odit nihil recusandae
+            iure eum delectus, sequi dolorum libero harum unde animi quaerat
+            explicabo, laborum porro neque nostrum, ducimus modi. Quisquam fuga
+            nulla, quos animi similique autem praesentium maxime iusto dolores
+            culpa dolorem explicabo ullam assumenda id officia ex reiciendis
+            porro non placeat quidem voluptatibus reprehenderit, at molestias.
+            Ea vitae veniam aut excepturi consectetur fuga error?
+          </p>
+        </div>
       </div>
     </div>
     <div class="footer">
