--- a/index..html
+++ b/index..html
@@ -10,6 +10,11 @@
   </head>
   <body>
     <div class="container">
+      <a
+        href="https://www.instagram.com/lanahusain_/?hl=id"
+        class="ribbon"
+        target="_blank"
+      ></a>
       <div class="header">
         <h1>My Website</h1>
       </div>
